<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Basic Twitter</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline">TimelineActivity</string>
    <string name="username_label">\Jaimin Shah</string>
    <string name="tweet_body_label">Such a sweet tweet I tweeted</string>
    <string name="screenname_label">\@jaimintweets</string>
    <string name="time_elapsed_label">2m</string>
    <string name="action_tweet">Tweet</string>
    <string name="title_activity_compose">New Tweet</string>
    <string name="hello_world">Hello world!</string>
    <string name="compose_tweet_hint">What\'s happening?</string>
    <string name="title_activity_detail">Tweet</string>
    <string name="created_at_label">9/28/14, 10:21 AM</string>
    <string name="action_chars_left">140</string>
    <string name="retweet_count_label">30</string>
    <string name="fav_count_label">45</string>
    <string name="retweeted_by_label">Neil Gaiman retweeted</string>
    <string name="retweets_caps_label">RETWEETS</string>
    <string name="favorites_caps_label">FAVORITES</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_profile">Profile</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="tweets_label">TWEETS</string>
    <string name="label_tweets_count">3000</string>
    <string name="label_following">FOLLOWING</string>
    <string name="labelFollowersCount">FOLLOWERS</string>
    <string name="label_following_count">1711</string>
    <string name="label_followers_count">60000</string>
    <string name="title_activity_user_list">UserListActivity</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="action_search">Search</string>

</resources>