<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jaiminshah.codepath.basictwitter.activities.TimelineActivity" >

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom|collapseActionView"
        android:actionViewClass="android.widget.SearchView" />
    <item android:id="@+id/action_compose_tweet"
        android:title="@string/action_tweet"
        android:showAsAction="always"
        android:icon="@drawable/ic_new_tweet"/>
    <item android:id="@+id/action_profile"
        android:title="@string/action_profile"
        android:showAsAction="always"
        android:icon="@drawable/ic_profile"/>
</menu>
