<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jaiminshah.codepath.basictwitter.fragments.UserInfoFragment">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/media_image_height">

        <ImageView
            android:id="@+id/ivProfileBackground"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:background="@color/secondary_gary_2"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:id="@+id/llUserInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivProfileImage"
                android:layout_width="@dimen/profile_img"
                android:layout_height="@dimen/profile_img"
                android:layout_gravity="center"
                android:src="@drawable/user_img_placeholder" />

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/tiny_margin"
                android:text="@string/username_label"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvScreenname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/tiny_margin"
                android:text="@string/screenname_label"
                android:textColor="@android:color/white"
                android:textSize="@dimen/small_font_size" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llBottomBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small_margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvTweetCount"
                android:text="@string/label_tweets_count" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tweets_label"
                android:textColor="@color/secondary_gary_3" />
        </LinearLayout>

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_textfield"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small_margin"
            android:layout_weight="1"
            android:orientation="vertical"
            android:onClick="onFollowingClick">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvFollowingCount"
                android:text="@string/label_following_count" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_following"
                android:textColor="@color/secondary_gary_3" />
        </LinearLayout>

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_textfield"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small_margin"
            android:layout_weight="1"
            android:orientation="vertical"
            android:onClick="onFollowersClick">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvFollowersCount"
                android:text="@string/label_followers_count" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelFollowersCount"
                android:textColor="@color/secondary_gary_3" />
        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:id="@+id/ivLineBelowCreatedAt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/llBottomBar"
        android:scaleType="fitXY"
        android:src="@android:drawable/divider_horizontal_textfield" />


</RelativeLayout>
