<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jaiminshah.codepath.basictwitter.activities.DetailActivity">

    <ImageView
        android:layout_width="@dimen/profile_img"
        android:layout_height="@dimen/profile_img"
        android:id="@+id/ivProfileImage"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/user_img_placeholder"
        android:layout_marginRight="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_label"
        android:id="@+id/tvUsername"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:layout_marginRight="@dimen/tiny_margin"
        android:layout_marginEnd="@dimen/tiny_margin"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screenname_label"
        android:id="@+id/tvScreenname"
        android:textColor="@color/secondary_gary_3"
        android:layout_below="@+id/tvUsername"
        android:layout_alignLeft="@+id/tvUsername"
        android:layout_alignStart="@+id/tvUsername"
        android:textSize="@dimen/small_font_size"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tweet_body_label"
        android:id="@+id/tvStatus"
        android:layout_below="@+id/ivProfileImage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:linksClickable="true"
        android:layout_marginTop="@dimen/activity_horizontal_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/created_at_label"
        android:id="@+id/tvCreatedAt"
        android:layout_below="@+id/tvStatus"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/secondary_gary_3"
        android:layout_marginTop="@dimen/small_margin"
        android:textSize="@dimen/small_font_size"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvCreatedAt"
        android:scaleType="fitXY"
        android:layout_marginTop="@dimen/small_margin"
        android:src="@android:drawable/divider_horizontal_textfield"/>

</RelativeLayout>
